Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -50,3 +50,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || serge.bierhuizen || Built and tested || RGB built - EV Sim || Paid || ||
 || || rmbertjones || || || || ||
 || || Krull.Justin ||Kit || RGB kit - EV sim kit || Paid || ||
+|| || michaelma8888 || Built and tested || RGB LCD || || ||
+|| || flbas1 || Built and tested || RGB LCD || || ||
+|| || VintageAirLLC || Built and tested || || || ||
+|| || cjswan ||	Kit || || || || 
