--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -46,6 +46,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || 2johnbooker || Built and Tested || || Paid || ||
 || || Sven.Leser || || || || ||
 || || ClintonEFisher || Kit || EV Sim || Paid || ||
+|| ||  davemco3 || Built and Tested || RGB LCD Built - EV Sim || Paid || ||
 || || barryorlando ||Kit || RGB kit - EV sim || Paid || ||
 || || serge.bierhuizen || Built and tested || RGB built - EV Sim || Paid || ||
 || || rmbertjones || || || || ||
