--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -28,7 +28,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 3 || bconner || Built and Tested || RGB built - EV Sim || Paid || ||
 || 4 || richardfstrange || || || || ||
 || 5 || pjtiger35 || || || || ||
-|| 6 || mrpilotron || Kit ~ || RGB LCD kit || Paid || ||
+|| 6 || mrpilotron ~ || Kit || RGB LCD kit || Paid || ||
 || 7 || jallison1 || || || || ||
 || 8 || alex.PTSbackup || || || || ||
 || 9 || Bloomer57 || || || || ||
@@ -46,7 +46,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || 2johnbooker || Built and Tested || || Paid || ||
 || || Sven.Leser || || || || ||
 || || ClintonEFisher || Kit || EV Sim || Paid || ||
-|| ||  davemco3 || Built and Tested || RGB LCD Built - EV Sim || Paid || ||
+|| ||  davemco3 ~ || Built and Tested || RGB LCD Built - EV Sim || Paid || ||
 || || barryorlando ||Kit || RGB kit - EV sim || Paid || ||
 || || serge.bierhuizen || Built and tested || RGB built - EV Sim || Paid || ||
 || || rmbertjones || || || || ||
