--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -56,3 +56,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || VintageAirLLC || Built and tested || || Paid || ||
 || || cjswan ||	Kit || || Paid || || 
 || || maboutte || Kit || RGB LCD kit || Paid || ||
+|| ||  2sign@earthlink.net || Built and Tested || RGB LCD Built - EV SIM || Paid || ||
