Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -57,3 +57,5 @@ Payment via paypal to chris1howell83@gmail.com
 || || cjswan ||	Kit || || Paid || || 
 || || maboutte || Kit || RGB LCD kit || Paid || ||
 || ||  2sign@earthlink.net || Built and Tested || RGB LCD Built - EV SIM || Paid || ||
+|| || hexidecimalgadget || || || || || 
+|| || thadthig || || || || ||
