--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -29,7 +29,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 4 || richardfstrange || || || || ||
 || 5 || pjtiger35 || || || || ||
 || 6 || mrpilotron ~ || Kit || RGB LCD kit || Paid || ||
-|| 7 || jallison1 || || || || ||
+|| 7 || jallison1 || Kit || RGB LCD Kit || Paid || ||
 || 8 || alex.PTSbackup || Built and Tested || EVsim || Paid || ||
 || 9 || Bloomer57 || || || || ||
 || 10 || bela.okmyx || Built and tested || RGB LCD built || Paid || ||
@@ -62,3 +62,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || hexidecimalgadget || || || || || 
 || || thadthig || Built and Tested || RGB LCD Built || Paid || ||
 || || louisfulton || Kit || || Paid || ||
+|| ||  gt1485a || Kit || || Paid || ||
