Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -41,7 +41,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 16 || Adrianrosc || || || || ||
 || 17 || robot256 || Kit || Kit || Paid || ||
 || 18 || kao.russell || Built and Tested || RGB Kit || Paid || ||
-|| 19 || Eric Ruhl  || Built and Tested || || Paid || ||
+|| 19 || Eric Ruhl  || Built and Tested || RGB LCD Built|| Paid || ||
 || 20 || vcrllc || || || || ||
 || || 2johnbooker || Built and Tested || || Paid || ||
 || || Sven.Leser || || || || ||
