--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -57,7 +57,7 @@ Payment via paypal to chris1howell83@gmail.com
 || || cjswan ||	Kit || || Paid || || 
 || || maboutte || Kit || RGB LCD kit || Paid || ||
 || ||  2sign@earthlink.net || Built and Tested || RGB LCD Built - EV SIM || Paid || ||
-|| || Mathieu (France) || || || || ||
+|| || Mathieu (France) ~2 || Built and tested || RGB LCD Built || Paid || ||
 || || skider67 (France) || || || || ||
 || || hexidecimalgadget || Built and Tested || RGB LCD Built - EV sim || Paid || || 
 || || thadthig || Built and Tested || RGB LCD Built || Paid || ||
