Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -66,3 +66,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || jackncoke72 || Built and Tested || || || ||
 || || 3400broadway || Built and Tested || LCD Built || || ||
 || || ellweber || Built and Tested || RGB LCD Built - EV Sim || Paid || ||
+|| ||  jpaction1964 || Built and Tested || || Paid || ||
