Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -71,3 +71,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || rocketguy || Built || RGB LCD Built || || ||
 || || bikekite || Kit || || || ||
 || || kwokjl@uci.edu || Built || RGB LCD Built || || ||
+|| || propoxyphene12 || Kit || || Paid || ||
