Edited wiki page January through web user interface.

--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -72,3 +72,4 @@ Payment via paypal to chris1howell83@gmail.com
 || || bikekite || Kit || || || ||
 || || kwokjl@uci.edu || Built || RGB LCD Built || || ||
 || || propoxyphene12 || Kit || || Paid || ||
+|| || rfulcher@dolio.net || Kit || || || || 
