--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -12,29 +12,29 @@ Payment via paypal to chris1howell83@gmail.com
 || Build Status || Payment Due || Parts orders - In progress || 
 
 || Planning || Done || 
-|| Order parts || In Progress ||
-|| Build - SMT || In Progress ||
-|| Load Firmware || In Progress ||
-|| Package OpenEVSE Plus "Kit" || ||
-|| Ship OpenEVSE Plus "Kit" || ||
-|| Build - Through hole parts || In Progress ||
-|| Test OpenEVSE "Built and Tested"|| In Progress ||
-|| Package OpenEVSE "Built and Tested" || ||
-|| Ship OpenEVSE "Built and Tested"|| ||
+|| Order parts || Done ||
+|| Build - SMT || Done ||
+|| Load Firmware || Done ||
+|| Package OpenEVSE Plus "Kit" || Done ||
+|| Ship OpenEVSE Plus "Kit" || In Progress ||
+|| Build - Through hole parts || Done ||
+|| Test OpenEVSE "Built and Tested"|| Done ||
+|| Package OpenEVSE "Built and Tested" || Done ||
+|| Ship OpenEVSE "Built and Tested"|| In Progress ||
 
 || Slot || Name || OpenEVSE Plus || Extras || Payment Recieved || Shipped ||
-|| 1 || dvester || Built || EV Simulator || Paid || ||
-|| 2 || wilsonlee || Built || || Paid || ||
+|| 1 || dvester || Built || EV Simulator || Paid || Shipped 1/21 ||
+|| 2 || wilsonlee || Built || || Paid || Shipped 1/21 ||
 || 3 || bconner || Built || RGB built - EV Sim || Paid || ||
 || 4 || richardfstrange || || || || ||
 || 5 || pjtiger35 || || || || ||
-|| 6 || mrpilotron ~ || Kit || RGB LCD kit || Paid || ||
-|| 7 || jallison1 || Kit || RGB LCD Kit || Paid || ||
+|| 6 || mrpilotron ~ || Kit || RGB LCD kit || Paid || Shipped 1/21 ||
+|| 7 || jallison1 || Kit || RGB LCD Kit || Paid || Shipped 1/21 ||
 || 8 || alex.PTSbackup || Built || EVsim || Paid || ||
 || 9 || Bloomer57 || || || || ||
 || 10 || bela.okmyx || Built || RGB LCD built || Paid || ||
 || 11 || mwyatt1604 || || || || ||
-|| 12 || steven.cox.ee || Kit || RGB kit || Paid || ||
+|| 12 || steven.cox.ee || Kit || RGB kit || Paid || Shipped 1/21 ||
 || 13 || devincarlisto || Built || RGB LCD built - EV Sim kit || Paid || ||
 || 14 || tomofe || || || || ||
 || 15 || vcrllc || Built || || Paid || ||
@@ -45,7 +45,7 @@ Payment via paypal to chris1howell83@gmail.com
 || 20 || vcrllc || || || || ||
 || || 2johnbooker || Built || || Paid || ||
 || || Sven.Leser || Built || RGB LCD Built - Int Ship || Paid || ||
-|| || ClintonEFisher || Kit || EV Sim || Paid || ||
+|| || ClintonEFisher || Kit || EV Sim || Paid || Shipped 1/21 ||
 || ||  davemco3 ~ || Built  || RGB LCD Built - EV Sim || Paid || ||
 || || barryorlando ||Kit || RGB LCD kit (RTC) - EV sim || Paid || ||
 || || serge.bierhuizen || Built || RGB built - EV Sim || Paid || ||
