--- a/wiki/January.wiki
+++ b/wiki/January.wiki
@@ -25,17 +25,17 @@ Payment via paypal to chris1howell83@gmail.com
 || Slot || Name || OpenEVSE Plus || Extras || Payment Recieved || Shipped ||
 || 1 || dvester || Built || EV Simulator || Paid || Shipped 1/21 ||
 || 2 || wilsonlee || Built || || Paid || Shipped 1/21 ||
-|| 3 || bconner || Built || RGB built - EV Sim || Paid || ||
+|| 3 || bconner || Built || RGB built - EV Sim || Paid || Shipped 1/22  ||
 || 4 || richardfstrange || || || || ||
 || 5 || pjtiger35 || || || || ||
 || 6 || mrpilotron ~ || Kit || RGB LCD kit || Paid || Shipped 1/21 ||
 || 7 || jallison1 || Kit || RGB LCD Kit || Paid || Shipped 1/21 ||
 || 8 || alex.PTSbackup || Built || EVsim || Paid || ||
 || 9 || Bloomer57 || || || || ||
-|| 10 || bela.okmyx || Built || RGB LCD built || Paid || ||
+|| 10 || bela.okmyx || Built || RGB LCD built || Paid || Shipped 1/22 ||
 || 11 || mwyatt1604 || || || || ||
 || 12 || steven.cox.ee || Kit || RGB kit || Paid || Shipped 1/21 ||
-|| 13 || devincarlisto || Built || RGB LCD built - EV Sim kit || Paid || ||
+|| 13 || devincarlisto || Built ||  || Paid || Shipped 1/22 ||
 || 14 || tomofe || || || || ||
 || 15 || vcrllc || Built || || Paid || ||
 || 16 || Adrianrosc || || || || ||
