Edited wiki page OpenEVSE_boards through web user interface.

--- a/wiki/OpenEVSE_boards.wiki
+++ b/wiki/OpenEVSE_boards.wiki
@@ -3,7 +3,7 @@
 
 || || OpenEVSE Plus || Arduino Shield || Through Hole ||
 || Picture ||http://farm8.staticflickr.com/7247/8169379635_84f577e1f3_n.jpg||http://farm7.staticflickr.com/6222/7003031805_747830f4b7_n.jpg||http://farm9.staticflickr.com/8453/8041888276_24c025f0b7.jpg||
-|| || Built and Kit || Kit || DIY - Files only ||
+|| || Built and Kit || DIY - Files only  || DIY - Files only ||
 || Current HW version || OpenEVSE Plus || OpenEVSE shield v1 || DIY EVSE v4 || 
 || Firmware || pre-loaded || Requires Arduino UNO || ||
 || Power Supply || Integrated 4W || External || External || 
